# penna-model

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.argparse  CMakeLists.txt.yaml-cpp  Common.h  Config.h  FileOutput.cpp  FileOutput.h  Generator.h  Individual.cpp  Individual.h  LICENSE  NumbersGenerator.cpp  Output.cpp  Output.h  README.md  Simulation.cpp  Simulation.h  SimulationData.cpp  SimulationData.h  Tests.cmake  config.yaml  main.cpp  penna.cpp  sonar-project.properties
.github/workflows/: build-and-test.yml  buld-and-test-linux.yml  buld-and-test-windows.yml  cmake-single-platform.yml  codeql.yml  pylint.yml  sonarcloud.yml  static-analysis-and-coverage.yml
plots/: common.py  finalize.plt  generate_added_mutations_plots.py  generate_all.py  generate_basic_plots.py  generate_catching_plots.py  generate_genome_length_plots.py  generate_lethal_mutations_plots.py  generate_offspring_count_plots.py  generate_reproduction_age_plots.py  init.plt
plots/AddedMutations/: added_2_config.yaml  added_3_config.yaml  age_distribution.plt  births_and_deaths.plt  bits_distribution.plt  deaths_distribution.plt  families.plt  population.plt  wykresy2.plt  wykresy3.plt  wykresy4_2.plt
plots/Basic/: config.yaml
plots/Catching/: 10_percent_config.yaml  15_percent_config.yaml  30_percent_config.yaml  age_distribution.plt  births_and_deaths.plt  bits_distribution.plt  deaths_distribution.plt  families.plt  ogolny_1.plt  population.plt  wiek_2_wykres_1.plt  wiek_2_wykres_4.plt  wiek_3_wykres_1.plt  wiek_3_wykres_4.plt  wiek_4_wykres_1.plt  wiek_4_wykres_3.plt  wykresy3.plt  zestawienie_doswiadczenie_1.txt  zestawienie_doswiadczenie_2.txt  zestawienie_doswiadczenie_3.txt
plots/GenomeLength/: age_distribution.plt  births_and_deaths.plt  bits_distribution.plt  config.yaml  deaths_distribution.plt  families.plt  population.plt  wykresy1.plt  wykresy3.plt  wykresy7.plt  wykresy7a.plt  wykresy8a.plt  wykresy9.plt  wykresy9a.plt
plots/LethalMutations/: age_distribution.plt  births_and_deaths.plt  bits_distribution.plt  deaths_distribution.plt  families.plt  lethal_2_config.yaml  lethal_3_config.yaml  population.plt
plots/OffspringCount/: births_and_deaths.plt  count_2_config.yaml  count_4_config.yaml  deaths_distribution.plt  families.plt  population.plt  wykresy1.plt  wykresy2.plt  wykresy3.plt  wykresy4_1.plt  wykresy4_2.plt  wykresy4_3.plt  wykresy5.plt  wykresy6.plt
plots/ReproductionAge/: age_12_config.yaml  age_8_config.yaml  age_distribution.plt  births_and_deaths.plt  bits_distribution.plt  deaths_distribution.plt  families.plt  population.plt  wykresy1.plt  wykresy4_2.plt
plots/basic/: age_distribution.plt  births_and_deaths.plt  bits_distribution.plt  config.yaml  deaths_distribution.plt  families.plt  finalize.plt  init.plt  population.plt  wykresy1.plt  wykresy2.plt  wykresy3.plt  wykresy5.plt
plots/catching/: 20_percent_config.yaml  wiek_2_wykres_2.plt  wiek_2_wykres_3.plt  wiek_3_wykres_2.plt  wiek_3_wykres_3.plt  wiek_4_wykres_2.plt  wiek_4_wykres_4.plt  wykresy5.plt  zestawienie.plt
plots/standard/: wykresy1.plt  wykresy2.plt  wykresy4.plt  wykresy6.plt
plots/standard/1_Referencyjne (7-9)/: wykresy2.plt  wykresy4.plt  wykresy5.plt  wykresy6.plt  wykresy8.plt
plots/standard/2_N_0_i_b (1-6)/: wykresy1.plt  wykresy2.plt  wykresy4_1.plt  wykresy4_3.plt  wykresy5.plt  wykresy6.plt
plots/standard/3_R (10-15)/: wykresy3.plt  wykresy4_1.plt  wykresy4_3.plt  wykresy5.plt  wykresy6.plt
plots/standard/4_T (16-21)/: wykresy1.plt  wykresy2.plt  wykresy4_1.plt  wykresy4_3.plt  wykresy5.plt  wykresy6.plt
plots/standard/5_m (22-27)/: wykresy1.plt  wykresy4_1.plt  wykresy4_3.plt  wykresy6.plt
src/: AverageData.cpp  AverageData.h  AvgResults.cpp  AvgResults.h  Common.h  Config.cpp  Config.h  FileOutput.cpp  FileOutput.h  Generator.cpp  Generator.h  Individual.cpp  Individual.h  Logger.h  Metrics.h  NumbersGenerator.cpp  NumbersGenerator.h  Output.cpp  Output.h  OutputType.h  ProgressBar.cpp  ProgressBar.h  ProgressBarOverall.cpp  ProgressBarOverall.h  ProgressBarSequential.cpp  ProgressBarSequential.h  ProgressCallback.cpp  ProgressCallback.h  Results.cpp  Results.h  ResultsData.cpp  ResultsData.h  Runner.cpp  Runner.h  SimResults.cpp  SimResults.h  Simulation.cpp  Simulation.h  SimulationData.cpp  SimulationData.h  (+3 more)
test/: CMakeLists.txt  CatchingTest.cpp  Common.cpp  Common.h  ConfigTest.cpp  CoutEater.cpp  CoutEater.h  E2ETest.cpp  FakeGenerator.cpp  FakeGenerator.h  IndividualTest.cpp  MetricsTest.cpp  MockedGenerator.cpp  MockedGenerator.h  NullOutput.cpp  NullOutput.h  NumbersGeneratorTest.cpp  OutputTest.cpp  ProgressBarOverallTest.cpp  ProgressBarSequentialTest.cpp  ProgressCallbackTest.cpp  RunnerTest.cpp  SimulationTest.cpp  StringOutput.cpp  StringOutput.h
test/TestFiles/: averages_age_distribution.txt  averages_deaths_distribution.txt  averages_families.txt  output_sim1_age_distribution.txt  output_sim1_finalPopulation.txt  proces1_symulacja0_gompertz.txt  proces1_symulacja0_initialPopulation.txt  proces1_symulacja0_rodziny.txt  proces1_symulacja0_rozklad_bitow.txt  proces1_symulacja0_rozklad_wieku.txt  proces1_symulacja1_gompertz.txt  proces1_symulacja1_osobniki.txt  proces1_symulacja1_rodziny.txt  proces1_symulacja1_rozklad_bitow.txt  proces1_symulacja1_rozklad_wieku.txt  proces1_symulacja1_statystyki.txt  sim0_age_distribution.txt  sim0_bits_distribution.txt  sim0_deaths_distribution.txt  sim0_families.txt  sim0_output_families.txt  sim0_statistics.txt  sim1_age_distribution.txt  sim1_bits_distribution.txt  sim1_deaths_distribution.txt  sim1_families.txt  sim1_finalPopulation.txt  sim1_initialPopulation.txt  sim1_statistics.txt
tests/: CMakeLists.txt  CatchingTest.cpp  Common.cpp  Common.h  ConfigTest.cpp  FakeGenerator.h  OutputTest.cpp  ProgressBarSequentialTest.cpp  SimulationTest.cpp  StringOutput.cpp  StringOutput.h
tests/TestFiles/: averages_bits_distribution.txt  averages_statistics.txt  sim1_age_distribution.txt  sim1_deaths_distribution.txt  sim1_initialPopulation.txt  sim1_statistics.txt
(+6 files in other folders)
